--- a/client/src/template.html
+++ b/client/src/template.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
-    <body>
+    <body style="background-color: #011627">
         <div id="root">
             <h1>Some pre-rendered react here</h1>
         </div>
